# wg-config-generator

./: .dockerignore  .gitignore  BUILD.bazel  Dockerfile  README.md  WORKSPACE  config.yaml  deps.bzl  go.mod  go.sum  main.go
cmd/: BUILD.bazel  client.go  root.go  server.go
config/: BUILD.bazel  config.go  config_test.go
config/testdata/: config.match.yaml  config.unmatch.yaml
domain/: client_config.go  server_config.go
handler/: BUILD.bazel  command.go  command_mock.go  config_generator.go  config_generator_test.go  config_presenter.go  config_reader.go  config_reader_test.go  config_writer.go  config_writer_test.go  handler.go  helper_test.go  key_generator.go  key_generator_test.go
handler/testdata/: peer1.conf  wg0.conf.1  wg0.conf.2  wg0.success.conf
handler/testdata/clients/: client1.json
handler/testdata/clients/secrets/: client1.conf  client2.conf
model/: BUILD.bazel  client_config.go  output_type.go  server_config.go
util/: BUILD.bazel  error.go  file.go  file_error.go  key_error.go  writer.go
utils/: file.go
